# ATLAS-Client

./: README.md  pyproject.toml
src/client/: __init__.py  __main__.py  config.json  database_frontend.py  main_window.py  test.py
src/client/data_handler/: api_handler.py
src/client/filters/: fuzzyfilter.py
src/client/moveable_widgets/: canva.py  widget.py
src/client/popup_selection/: __init__.py  popup.py
