[project]
name = "atlas-client"
version = "0.0.1"
description = "ATLAS-client"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "pyside6>=6.10.2",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "pre-commit",
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
client = "client.main:main"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
